CHICA-885 Alignment Issue on ePWS

--- a/web/module/resources/pws.css
+++ b/web/module/resources/pws.css
@@ -112,7 +112,7 @@ body {
 
 .vitalsValues {
     float:left;
-    width:130px;
+    width:144px;
     height: 18px;
     margin-left:5px;
     text-align:left;
